--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/yashwanthkanchrala/namaste-react#readme",
   "devDependencies": {
-    "parcel": "^2.13.3",
     "process": "^0.11.10"
   },
   "dependencies": {
+    "parcel": "^2.14.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.6.2"
   },
   "browserslist": [
     "last 2 versions"
